correction for retry

--- a/day00/ex00/Makefile
+++ b/day00/ex00/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: dboyer <dboyer@student.42.fr>              +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2020/11/25 12:29:01 by dboyer            #+#    #+#              #
+#    Updated: 2020/11/25 12:29:03 by dboyer           ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = megaphone
 
 CXX = clang++
