--- a/day00/ex00/Makefile
+++ b/day00/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: dboyer <dboyer@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/11/25 12:29:01 by dboyer            #+#    #+#              #
-#    Updated: 2020/12/03 11:31:03 by dess             ###   ########.fr        #
+#    Updated: 2020/12/03 15:56:26 by dess             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@ NAME = megaphone
 
 CXX = clang++
 
-CFLAGS = -Wall -Wextra -Werror -O3 -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -O3 -std=c++98
 
 SRCS = megaphone.cpp
 
@@ -25,7 +25,7 @@ RM = rm -rf
 all     :	$(NAME)
 
 $(NAME) :	$(OBJS)
-	${CXX} ${CFLAGS} -o ${NAME} ${OBJS}
+	${CXX} ${CXXFLAGS} -o ${NAME} ${OBJS}
 
 clean   :
 	$(RM) $(OBJS)
