--- a/day00/ex01/Makefile
+++ b/day00/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: dboyer <dboyer@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/11/25 12:26:37 by dboyer            #+#    #+#              #
-#    Updated: 2020/11/25 12:26:39 by dboyer           ###   ########.fr        #
+#    Updated: 2020/12/03 15:56:12 by dess             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@ NAME = annuaire
 
 CXX = clang++
 
-CFLAGS = -Wall -Wextra -Werror -O3 -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -O3 -std=c++98
 
 SRCS = ./Contact.class.cpp ./Annuaire.class.cpp
 MAIN = ./main.cpp
@@ -27,7 +27,7 @@ RM = rm -rf
 all     :	$(NAME)
 
 $(NAME) :	$(OBJS) $(MAIN_OBJS)
-	${CXX} ${CFLAGS} -o ${NAME} ${OBJS} ${MAIN_OBJS}
+	${CXX} ${CXXFLAGS} -o ${NAME} ${OBJS} ${MAIN_OBJS}
 
 clean   :
 	$(RM) $(OBJS)
