--- a/day07/ex00/Makefile
+++ b/day07/ex00/Makefile
@@ -5,22 +5,23 @@
 #                                                     +:+ +:+         +:+      #
 #    By: dboyer <dboyer@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2020/11/25 12:26:37 by dboyer            #+#    #+#              #
-#    Updated: 2021/01/16 14:56:45 by root             ###   ########.fr        #
+#    Created: 2021/01/24 13:25:41 by dboyer            #+#    #+#              #
+#    Updated: 2021/01/24 13:25:44 by dboyer           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
+
 
 NAME = template_test
 
 CXX = clang++
 
-CXXFLAGS = -Wall -Wextra -Werror -O3 -std=c++98 -I ./includes
+CXXFLAGS = -Wall -Wextra -Werror -O3 -std=c++98
 
-MAIN = ./srcs/main.cpp
+MAIN = main.cpp
 
 MAIN_OBJS = $(MAIN:.cpp=.o)
 
-HEADERS = ./includes/whatever.hpp
+HEADERS = whatever.hpp
 
 RM = rm -rf 
 
