--- a/day07/ex02/Makefile
+++ b/day07/ex02/Makefile
@@ -5,8 +5,8 @@
 #                                                     +:+ +:+         +:+      #
 #    By: dboyer <dboyer@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2020/11/25 12:26:37 by dboyer            #+#    #+#              #
-#    Updated: 2021/01/16 17:06:07 by root             ###   ########.fr        #
+#    Created: 2021/01/24 13:27:57 by dboyer            #+#    #+#              #
+#    Updated: 2021/01/24 13:27:59 by dboyer           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
